--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,4 +8,13 @@ mat-sidenav {
 
 main {
     padding: 10px;
+    height: calc(100% - 148px);
+}
+
+footer{
+    background-color: #3f51b5;
+    color: white;
+    height: 64px;
+    text-align: center;
+    border-radius: 3px;
 }
