--- a/src/app/menu-navegacion/menu-navegacion.component.html
+++ b/src/app/menu-navegacion/menu-navegacion.component.html
@@ -5,17 +5,14 @@
         </button>
     </div>
     <div>
-        <a routerLink="/inicio" routerLinkActive="active" ariaCurrentWhenActive="page">Inicio</a>
-    </div>
-    <div>
+        <a routerLink="/inicio" routerLinkActive="active" ariaCurrentWhenActive="page">{{ "INICIO" | translate }}</a>
         <a routerLink="/quienes-somos" routerLinkActive="active" ariaCurrentWhenActive="page">Quienes Somos</a>
-    </div>
-    <div>
         <a routerLink="/contacto" routerLinkActive="active" ariaCurrentWhenActive="page">Contacto</a>
+
     </div>
-    <div>
-        <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a>
-    </div>    
+    <div style="float:right;">
+        <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page" style="float:right;">Login</a>
+    </div>
     <!-- <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
         <ul fxLayout fxLayoutGap="15px" class="navigation-items">
             <li><a routerLink="/inicio" routerLinkActive="active" ariaCurrentWhenActive="page">Inicio</a></li>
