--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,5 +35,5 @@ $quetedebo-front-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { margin:0; height: 100%; }
+/*html { margin:0; }*/
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
