--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <mat-icon>menu</mat-icon>
       </button>
       <span>Que te debo</span>
-      <span class="menu-spacer"></span>
+      <!--<span class="menu-spacer"></span>-->
       <div fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
         <a routerLink="/inicio" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>{{ "INICIO" | translate }}</a>
@@ -30,15 +30,17 @@
         </mat-menu>
 
         <a routerLink="/archivados" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Archivados</a>
-        <a routerLink="/crear-usuario" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Crear Usuario</a>
-        <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Login</a>
+        <!--<a routerLink="/crear-usuario" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Crear Usuario</a>-->
+        <div class="derecha">
+          <a mat-button routerLinkActive="active" ariaCurrentWhenActive="page" [matMenuTriggerFor]="menuAjustes" fxHide.lt-md>Ajustes</a>
+          <mat-menu #menuAjustes="matMenu" xPosition="after">
+            <a routerLink="/modificar-pass" routerLinkActive="active" ariaCurrentWhenActive="page" mat-menu-item>Cambio contraseña</a>
+            <a routerLink="/datos-personales" routerLinkActive="active" ariaCurrentWhenActive="page" mat-menu-item>Datos personales</a>
+          </mat-menu>
 
-        <a mat-button routerLinkActive="active" ariaCurrentWhenActive="page" [matMenuTriggerFor]="menuAjustes" fxHide.lt-md>Ajustes</a>
-        <mat-menu #menuAjustes="matMenu" xPosition="after">
-          <a routerLink="/moificar-pass" routerLinkActive="active" ariaCurrentWhenActive="page" mat-menu-item>Cambio contraseña</a>
-          <a routerLink="/datos-personales" routerLinkActive="active" ariaCurrentWhenActive="page" mat-menu-item>Datos personales</a>
-        </mat-menu>
-
+          <a class='btn-login' routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Entrar</a>
+          <a class='btn-logout' (click)="cerrarSesion()" routerLink="/login" hidden="true" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Salir</a>
+        </div>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
