--- a/src/app/usuario/crear/crear.component.html
+++ b/src/app/usuario/crear/crear.component.html
@@ -1,1 +1,47 @@
-<p>crear works!</p>
+<!-- AQUI ESTARÁ EL FORMULARIO DE CREACIÓN DEL USUARIO (SIN LO DATOS PERSONALES) -->
+<div class="contenedor-principal">
+  <section>
+    <h2>Crear usuario</h2>
+    <article>
+      <mat-form-field>
+        <mat-label>Usuario</mat-label>
+        <input
+          matInput
+          placeholder="usuario@dominio.com"
+          [formControl]="email"
+          required
+        />
+        <mat-error *ngIf="email.invalid">{{ errorEmail() }}</mat-error>
+      </mat-form-field>
+    </article>
+    <article>
+      <mat-form-field hintLabel="Mínimo 6 carácteres">
+        <mat-label>Contraseña</mat-label>
+        <input
+          matInput
+          #input
+          [type]="hide ? 'password' : 'text'"
+          [formControl]="pass"
+          required
+        />
+        <mat-error *ngIf="pass.invalid">{{ errorPass() }}</mat-error>
+        <mat-hint align="end">{{ input.value.length }}/6</mat-hint>
+        <button
+          mat-icon-button
+          matSuffix
+          (click)="hide = !hide"
+          [attr.aria-label]="'Ocultar password'"
+          [attr.aria-pressed]="hide"
+        >
+          <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+        </button>
+      </mat-form-field>
+    </article>
+    <article>
+      <button mat-fab extended color="primary" (click)="btnCrearUsuario()">
+        <mat-icon>send</mat-icon>
+        Crear
+      </button>
+    </article>
+  </section>
+</div>
