--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,6 @@ $quetedebo-front-theme: mat.define-light-theme((
 
 /*html { margin:0; }*/
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
