--- a/src/app/cobros/archivados/archivados.component.html
+++ b/src/app/cobros/archivados/archivados.component.html
@@ -1,1 +1,13 @@
-<p>archivados works!</p>
+<section>
+  <div class="main">
+    <ul class="cards">
+      <li class="cards_item" *ngFor="let cobro of cobros">
+        <app-cobro
+          [cobro]="cobro"
+          tipo="archivados"
+          style="display: inline-block"
+        ></app-cobro>
+      </li>
+    </ul>
+  </div>
+</section>
