--- a/src/app/usuario/login/login.component.html
+++ b/src/app/usuario/login/login.component.html
@@ -15,7 +15,7 @@
       </mat-form-field>
     </article>
     <article>
-      <mat-form-field hintLabel="Mínimo 6 carácteres">
+      <mat-form-field>
         <mat-label>Contraseña</mat-label>
         <input
           matInput
@@ -25,7 +25,6 @@
           required
         />
         <mat-error *ngIf="pass.invalid">{{ errorPass() }}</mat-error>
-        <mat-hint align="end">{{ input.value.length }}/6</mat-hint>
         <button
           mat-icon-button
           matSuffix
