--- a/src/app/web/quienes-somos/quienes-somos.component.html
+++ b/src/app/web/quienes-somos/quienes-somos.component.html
@@ -1,24 +1,39 @@
-<div class="card">
-  <div class="img-bx">
-    <img src="https://i.postimg.cc/dQ7zWbS5/img-4.jpg" alt="img" />
-  </div>
-  <div class="content">
-    <div class="detail">
-      <h2>Emilia Roy<br /><span>Senior Designer</span></h2>
-      <ul class="sci">
-        <li>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-        </li>
-      </ul>
+<div class="contenedor-principal">
+  <section>
+    <article><h2>Quienes somos</h2></article>
+
+    <article>
+      <div class="content2">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent accumsan, massa nec lacinia vulputate, ligula velit ullamcorper dui, at consectetur mi ligula vitae enim. Nullam luctus ante at congue pharetra. Vivamus mi ipsum, porttitor quis lorem ac, sodales faucibus sapien. Donec iaculis leo sapien. Proin et vehicula metus, nec efficitur nisi. Sed consequat ipsum ut nunc egestas, ut vehicula dui placerat. Vivamus sagittis neque quam, eu posuere eros lacinia a. Quisque urna nisl, ornare sed tellus vitae, consequat malesuada risus. Vivamus vitae metus non libero fringilla ultrices. Duis a libero lacinia, scelerisque metus eget, venenatis neque. Etiam non elit ipsum. Nunc non laoreet nunc, vitae malesuada massa. Donec tincidunt blandit posuere. Vivamus fermentum eu ante eu venenatis. Donec vel justo elit. Nunc eget lorem tristique, dignissim elit id, sollicitudin tellus.</p>
+        <p>Vivamus ultrices lacus nulla, in mattis nisi pellentesque et. Phasellus faucibus magna sed ligula ullamcorper lobortis. Curabitur ut egestas nibh. Nullam porttitor lectus quis ex faucibus consectetur. Aliquam leo elit, vulputate sed malesuada et, porttitor sit amet metus. Duis dignissim nunc enim, nec condimentum mi fringilla id. Ut iaculis porta nisl vel hendrerit. Phasellus ut pretium risus, sit amet interdum metus.</p>
+        <p>Nullam semper egestas neque nec maximus. Sed fermentum enim leo, id eleifend nunc convallis sed. Nulla vitae turpis vel mauris ornare volutpat accumsan a nunc. Curabitur posuere rhoncus suscipit. Vivamus dignissim arcu elit, quis tincidunt sapien pharetra et. Vivamus sed risus ut nisi sagittis accumsan. Duis et nunc maximus, dignissim enim et, pretium dui. Donec finibus non ligula et aliquam. Vivamus eu lacus congue nisi venenatis pretium. Pellentesque fermentum elementum diam sed posuere.</p>
+        <p>Etiam et sem at eros mattis lacinia. Morbi id libero eget diam condimentum vulputate aliquet at velit. Sed tempus libero sed ante luctus pulvinar. Quisque a nibh a turpis interdum auctor. Integer vulputate tincidunt leo non aliquet. In nec interdum urna, in consequat ligula. Integer euismod nisl a tellus iaculis, vel feugiat tortor pellentesque.</p>
+      </div>
+    </article>
+
+    <div class="card">
+      <div class="img-bx">
+        <img src="../../../assets/img/quienes_somos.webp" alt="img" />
+      </div>
+      <div class="content">
+        <div class="detail">
+          <h2>Jesús Olmos<br /><span>Senior FullStack Developer</span></h2>
+          <ul class="sci">
+            <li>
+              <a href="#"><img src="../../../assets/icons/facebook.png" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="../../../assets/icons/instagram.png" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="../../../assets/icons/linkedin.png" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="../../../assets/icons/youtube.png" /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </div>
+  </section>
 </div>
