--- a/src/app/web/footer/footer.component.html
+++ b/src/app/web/footer/footer.component.html
@@ -1,20 +1,23 @@
 <footer fxflexFill>
-  &copy; Que te debo
-  Política de privacidad
-  Logo
-<!--  <div class="card">
-    <span>Social</span>
+  <div class="logo">
+    <div class="izquierda">
+      <img src="../../../assets/icons/logo.png" width="75px" />
+    </div>
+    <div class="nombre">&copy; Que te debo</div>
+  </div>
+  <div class="card derecha">
+    <span>Social Media</span>
     <a class="social-link" href="#">
-
+      <img src="../../../assets/icons/facebook.png" />
     </a>
     <a class="social-link" href="#">
-
+      <img src="../../../assets/icons/instagram.png" />
     </a>
     <a class="social-link" href="#">
-
+      <img src="../../../assets/icons/linkedin.png" />
     </a>
-    <a class="social-link" href="#">
-
+    <a class="social-link" href="#"
+      ><img src="../../../assets/icons/youtube.png" />
     </a>
-  </div>-->
+  </div>
 </footer>
