--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,88 +13,295 @@
       <!--<span class="menu-spacer"></span>-->
       <div fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-        <a routerLink="/inicio" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>{{ "INICIO" | translate }}</a>
-        <a routerLink="/quienes-somos" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Quienes Somos</a>
-        <a routerLink="/contacto" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Contacto</a>
+        <a
+          routerLink="/inicio"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-button
+          >{{ "INICIO" | translate }}</a
+        >
+        <a
+          routerLink="/quienes-somos"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-button
+          >Quienes Somos</a
+        >
+        <a
+          routerLink="/contacto"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-button
+          >Contacto</a
+        >
 
-        <a [hidden]="mostrar" routerLink="/crear-cobro" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Crear cobro</a>
+        <a
+          [hidden]="mostrar"
+          routerLink="/crear-cobro"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-button
+          >Crear cobro</a
+        >
 
-        <a [hidden]="mostrar" mat-button routerLinkActive="active" ariaCurrentWhenActive="page" [matMenuTriggerFor]="menuActivo" fxHide.lt-md>Activos</a>
+        <a
+          [hidden]="mostrar"
+          mat-button
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          [matMenuTriggerFor]="menuActivo"
+          fxHide.lt-md
+          >Activos</a
+        >
         <mat-menu #menuActivo="matMenu" xPosition="after">
-          <a routerLink="/activos-enviados" routerLinkActive="active" ariaCurrentWhenActive="page" mat-menu-item>Enviados</a>
-          <a routerLink="/activos-recibidos" routerLinkActive="active" ariaCurrentWhenActive="page" mat-menu-item>Recibidos</a>
+          <a
+            routerLink="/activos-enviados"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            mat-menu-item
+            >Enviados</a
+          >
+          <a
+            routerLink="/activos-recibidos"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            mat-menu-item
+            >Recibidos</a
+          >
         </mat-menu>
 
-        <a [hidden]="mostrar" mat-button routerLinkActive="active" ariaCurrentWhenActive="page" [matMenuTriggerFor]="menuHistorico" fxHide.lt-md>Histórico</a>
+        <a
+          [hidden]="mostrar"
+          mat-button
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          [matMenuTriggerFor]="menuHistorico"
+          fxHide.lt-md
+          >Histórico</a
+        >
         <mat-menu #menuHistorico="matMenu" xPosition="after">
-          <a routerLink="/historico-enviados" routerLinkActive="active" ariaCurrentWhenActive="page" mat-menu-item>Enviados</a>
-          <a routerLink="/historico-recibidos" routerLinkActive="active" ariaCurrentWhenActive="page" mat-menu-item>Recibidos</a>
+          <a
+            routerLink="/historico-enviados"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            mat-menu-item
+            >Enviados</a
+          >
+          <a
+            routerLink="/historico-recibidos"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            mat-menu-item
+            >Recibidos</a
+          >
         </mat-menu>
 
-        <a [hidden]="mostrar" routerLink="/archivados" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Archivados</a>
+        <a
+          [hidden]="mostrar"
+          routerLink="/archivados"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-button
+          >Archivados</a
+        >
         <!--<a routerLink="/crear-usuario" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Crear Usuario</a>-->
         <div class="derecha">
-          <a [hidden]="mostrar" mat-button routerLinkActive="active" ariaCurrentWhenActive="page" [matMenuTriggerFor]="menuAjustes" fxHide.lt-md>Ajustes</a>
+          <a
+            [hidden]="mostrar"
+            mat-button
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            [matMenuTriggerFor]="menuAjustes"
+            fxHide.lt-md
+            >Ajustes</a
+          >
           <mat-menu #menuAjustes="matMenu" xPosition="after">
-            <a routerLink="/modificar-pass" routerLinkActive="active" ariaCurrentWhenActive="page" mat-menu-item>Cambio contraseña</a>
-            <a routerLink="/datos-personales" routerLinkActive="active" ariaCurrentWhenActive="page" mat-menu-item>Datos personales</a>
+            <a
+              routerLink="/modificar-pass"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              mat-menu-item
+              >Cambio contraseña</a
+            >
+            <a
+              routerLink="/datos-personales"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              mat-menu-item
+              >Datos personales</a
+            >
           </mat-menu>
 
-          <a class='btn-login' [hidden]="logueado" routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Entrar</a>
-          <a class='btn-logout' [hidden]="mostrar" (click)="cerrarSesion()" routerLink="/login" hidden="true" routerLinkActive="active" ariaCurrentWhenActive="page" mat-button>Salir</a>
+          <a
+            class="btn-login"
+            [hidden]="logueado"
+            routerLink="/login"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            mat-button
+            >Entrar</a
+          >
+          <a
+            class="btn-logout"
+            [hidden]="mostrar"
+            (click)="cerrarSesion()"
+            routerLink="/login"
+            hidden="true"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            mat-button
+            >Salir</a
+          >
         </div>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
 
-
   <mat-sidenav-container fxFlexFill>
-    <mat-sidenav #sidenav>
+    <mat-sidenav #sidenav opened>
       <mat-nav-list>
         <!--<a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>-->
-        <a routerLink="/inicio" routerLinkActive="active" ariaCurrentWhenActive="page" mat-list-item>
-          <mat-icon>home</mat-icon> Inicio</a>
-        <a routerLink="/quienes-somos" routerLinkActive="active" ariaCurrentWhenActive="page" mat-list-item>Quienes Somos</a>
-        <a routerLink="/contacto" routerLinkActive="active" ariaCurrentWhenActive="page" mat-list-item>Contacto</a>
-        <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page" mat-list-item>Login</a>
+        <a
+          routerLink="/inicio"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-list-item
+        >
+          <mat-icon class="iconos-navbar">home</mat-icon> <span class="items-menu">Inicio</span> </a
+        >
+        <a
+          routerLink="/quienes-somos"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-list-item
+          >
+          <mat-icon class="iconos-navbar">question_answer</mat-icon> <span class="items-menu">Quienes Somos</span> </a
+        >
+        <a
+          routerLink="/contacto"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-list-item
+          ><mat-icon class="iconos-navbar">contact_support</mat-icon> <span class="items-menu">Contacto</span> </a
+        >
 
-        <span mat-list-item>Cobros</span>
-        <mat-expansion-panel [class.mat-elevation-z0]="true">
-          <mat-expansion-panel-header>
-              Activos
-          </mat-expansion-panel-header>
+        <a
+          routerLink="/crear-cobro"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-list-item
+          [fxShow]="!mostrar"
+        >
+          <mat-icon class="iconos-navbar">create</mat-icon> <span class="items-menu">Crear cobro</span> </a
+        >
+
+        <mat-expansion-panel
+          [class.mat-elevation-z0]="true"
+          [fxShow]="!mostrar"
+        >
+          <mat-expansion-panel-header><mat-icon class="iconos-navbar">euro_symbol</mat-icon> <span class="items-menu item-titulo">Activos</span> </mat-expansion-panel-header>
           <mat-nav-list>
-              <a mat-list-item routerLink="/activos-enviados" routerLinkActive="active" ariaCurrentWhenActive="page">
-                  <!--<mat-icon>apple</mat-icon>--><span>Enviados</span>
-              </a>
-              <a mat-list-item routerLink="/activos-recibidos" routerLinkActive="active" ariaCurrentWhenActive="page">
-                <!--<mat-icon>android</mat-icon>--><span>Recibidos</span>
+            <a
+              mat-list-item
+              routerLink="/activos-enviados"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+            >
+            <mat-icon class="iconos-navbar">redo</mat-icon> <span class="items-menu">Enviados</span>
+            </a>
+            <a
+              mat-list-item
+              routerLink="/activos-recibidos"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+            >
+            <mat-icon class="iconos-navbar">undo</mat-icon> <span class="items-menu">Recibidos</span>
             </a>
           </mat-nav-list>
-      </mat-expansion-panel>
+        </mat-expansion-panel>
 
-
-      <mat-expansion-panel [class.mat-elevation-z0]="true">
-        <mat-expansion-panel-header>
-            Hisórico
-        </mat-expansion-panel-header>
-        <mat-nav-list>
-            <a mat-list-item routerLink="/historico-enviados" routerLinkActive="active" ariaCurrentWhenActive="page">
-                <span>Enviados</span>
+        <mat-expansion-panel
+          [class.mat-elevation-z0]="true"
+          [fxShow]="!mostrar"
+        >
+          <mat-expansion-panel-header><mat-icon class="iconos-navbar">assignment</mat-icon> <span class="items-menu item-titulo">Histórico</span> </mat-expansion-panel-header>
+          <mat-nav-list>
+            <a
+              mat-list-item
+              routerLink="/historico-enviados"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+            >
+            <mat-icon class="iconos-navbar">redo</mat-icon> <span class="items-menu">Enviados</span>
             </a>
-            <a mat-list-item routerLink="/historico-recibidos" routerLinkActive="active" ariaCurrentWhenActive="page">
-              <span>Recibidos</span>
-          </a>
-        </mat-nav-list>
-      </mat-expansion-panel>
+            <a
+              mat-list-item
+              routerLink="/historico-recibidos"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+            >
+            <mat-icon class="iconos-navbar">undo</mat-icon> <span class="items-menu">Recibidos</span>
+            </a>
+          </mat-nav-list>
+        </mat-expansion-panel>
 
-      <a routerLink="/archivados" routerLinkActive="active" ariaCurrentWhenActive="page" mat-list-item>Archivados</a>
+        <a
+          routerLink="/archivados"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-list-item
+          [fxShow]="!mostrar"
+        >
+          <mat-icon class="iconos-navbar">bookmark</mat-icon> <span class="items-menu">Archivados</span> </a
+        >
 
+        <mat-expansion-panel
+          [class.mat-elevation-z0]="true"
+          [fxShow]="!mostrar"
+        >
+          <mat-expansion-panel-header><mat-icon class="iconos-navbar">settings</mat-icon> <span class="items-menu item-titulo">Ajustes</span> </mat-expansion-panel-header>
+          <mat-nav-list>
+            <a
+              mat-list-item
+              routerLink="/modificar-pass"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+            >
+              <mat-icon class="iconos-navbar">gesture</mat-icon> <span class="items-menu">Cambio contraseña</span>
+            </a>
+            <a
+              mat-list-item
+              routerLink="/historico-recibidos"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+            >
+              <mat-icon class="iconos-navbar">perm_identity</mat-icon> <span class="items-menu">Datos personales</span>
+            </a>
+          </mat-nav-list>
+        </mat-expansion-panel>
 
-      <span mat-list-item>Ajustes</span>
-      <a routerLink="/moificar-pass" routerLinkActive="active" ariaCurrentWhenActive="page" mat-list-item>Cambio contraseña</a>
-      <a routerLink="/datos-personales" routerLinkActive="active" ariaCurrentWhenActive="page" mat-list-item>Datos personales</a>
-
+        <a
+          class="btn-login"
+          routerLink="/login"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-list-item
+          [fxShow]="mostrar"
+          ><mat-icon class="iconos-navbar">account_circle</mat-icon> <span class="items-menu">Entrar</span> </a
+        >
+        <a
+          class="btn-logout"
+          [hidden]="mostrar"
+          (click)="cerrarSesion()"
+          routerLink="/login"
+          hidden="true"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          mat-list-item
+          [fxShow]="!mostrar"
+        >
+        <mat-icon class="iconos-navbar">exit_to_app</mat-icon> <span class="items-menu">Salir</span> </a
+        >
       </mat-nav-list>
     </mat-sidenav>
 
@@ -107,7 +314,6 @@
 
   <app-footer></app-footer>
 </div>
-
 
 <!--
 <h1>Que te debo!</h1>
