--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,3 +26,29 @@ a{
   text-decoration: none;
 }
 
+.iconos-navbar{
+  margin-right: 5px;
+}
+
+.items-menu{
+  position: absolute;
+  top: 10px;
+  padding-left: 10px;
+  font-size: 1.3em;
+  font-weight: bold;
+}
+
+mat-sidenav{
+  width: 325px !important;
+}
+
+mat-expansion-panel-header{
+  padding: 0 16px;
+}
+
+.item-titulo{
+  margin-left: 30px;
+  font-size:1.6em;
+  padding-top: 3px;
+}
+
